# routes/index.js
@@ -3,6 +3,6 @@ const router = express.Router();
 
 router.use('/', require('./swagger'));
 router.use('/customers', require('./customers'));
-router.use('/classes', require('./classes'));
+router.use('/class_info', require('./class_info'));
 
 module.exports = router;
